--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="newsletter-signup">
         <div class="wrapper">
           <h3 class="section-heading">enter your details to subscribe to our newsletter</h3>
-          <form action="#FIXME" method="get">
+          <form action="#FIXME" method="get" name="form">
             <div class="input-group">
               <label for="fname">first name</label>
               <input type="text" name="fname" id="fname">
@@ -68,18 +68,18 @@
             </div>
             <div class="input-group">
               <label for="work-email">work email</label>
-              <input type="text" name="work-email" id="work-email">
-              <span class="workEmail-alert">enter valid email (example: monilv@prdxn.com)</span>
+              <input type="text" name="work-email" id="work-email" placeholder="monilv@prdxn.com">
+              <span class="workEmail-alert">enter valid email</span>
             </div>
             <div class="input-group">
               <label for="password">password</label>
               <input type="text" name="password" id="password">
-              <span class="password-alert">atleast 1 speacial character, 1 capital, 1 number &amp; max length 10</span>
+              <span class="password-alert">atleast 1 speacial character, 1 capital, 1 small, 1 number &amp; max length 10</span>
             </div>
             <div class="input-group">
               <label for="cPassword">confirm password</label>
               <input type="text" name="cPassword" id="cPassword">
-              <span class="cPassword-alert">incorrect password</span>
+              <span class="cPassword-alert">password do not match, try again</span>
             </div>
             <div class="input-group">
               <span class="gender-heading">select gender</span>
@@ -87,10 +87,12 @@
                 <div class="male-box">
                   <label for="male">male</label>
                   <input type="radio" name="gender" id="male">
+                  <span class="custom-checkbox">check</span>
                 </div>
                 <div class="female-box">
                   <label for="female">female</label>
                   <input type="radio" name="gender" id="female">
+                  <span class="custom-checkbox">check</span>
                 </div>
               </div>
               <span class="gender-alert">select your gender</span>
