hyphen removed from input for attribute

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
               <span class="company-alert">enter alphabets only</span>
             </div>
             <div class="input-group">
-              <label for="company-type">company type</label>
-              <select name="company-type" id="company-type">
+              <label for="companytype">company type</label>
+              <select name="companytype" id="companytype">
                 <option value="- select -">- select -</option>
                 <option value="Type 1">type 1</option>
                 <option value="Type 2">type 2</option>
@@ -67,8 +67,8 @@
               <span class="country-alert">select country</span>
             </div>
             <div class="input-group">
-              <label for="work-email">work email</label>
-              <input type="text" name="work-email" id="work-email" placeholder="monilv@prdxn.com">
+              <label for="workemail">work email</label>
+              <input type="text" name="workemail" id="workemail" placeholder="monilv@prdxn.com">
               <span class="workEmail-alert">enter valid email</span>
             </div>
             <div class="input-group">
