first option's value removed from 'select tag'

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="input-group">
               <label for="companytype">company type</label>
               <select name="companytype" id="companytype">
-                <option value="- select -">- select -</option>
+                <option value="">- select -</option>
                 <option value="Type 1">type 1</option>
                 <option value="Type 2">type 2</option>
                 <option value="Type 3">type 3</option>
@@ -58,7 +58,7 @@
             <div class="input-group">
               <label for="country">country</label>
               <select name="country" id="country">
-                <option value="- choose -">- choose -</option>
+                <option value="">- choose -</option>
                 <option value="country 1">country 1</option>
                 <option value="country 2">country 2</option>
                 <option value="country 3">country 3</option>
