--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <section class="newsletter-signup">
         <div class="wrapper">
           <h3 class="section-heading">enter your details to subscribe to our newsletter</h3>
+          <span class="error-message">fill all inputs</span>
           <form action="#FIXME" method="get" name="form">
             <div class="input-group">
               <label for="fname">first name</label>
@@ -48,10 +49,10 @@
               <label for="companytype">company type</label>
               <select name="companytype" id="companytype">
                 <option value="">- select -</option>
-                <option value="Type 1">type 1</option>
-                <option value="Type 2">type 2</option>
-                <option value="Type 3">type 3</option>
-                <option value="Type 4">type 4</option>
+                <option value="type 1">type 1</option>
+                <option value="type 2">type 2</option>
+                <option value="type 3">type 3</option>
+                <option value="type 4">type 4</option>
               </select>
               <span class="alert">select company type</span>
             </div>
@@ -68,17 +69,17 @@
             </div>
             <div class="input-group">
               <label for="workemail">work email</label>
-              <input type="text" name="workemail" id="workemail" placeholder="monilv@prdxn.com" autocomplete="off">
+              <input type="email" name="workemail" id="workemail" placeholder="monilv@prdxn.com" autocomplete="off">
               <span class="alert">enter valid email (eg: monilv@prdxn.com)</span>
             </div>
             <div class="input-group">
               <label for="password">password</label>
-              <input type="text" name="password" id="password" autocomplete="off">
+              <input type="password" name="password" id="password" autocomplete="off">
               <span class="alert">atleast 1 speacial character, 1 capital, 1 small, 1 number &amp; length count between 5 to 10</span>
             </div>
             <div class="input-group">
               <label for="cPassword">confirm password</label>
-              <input type="text" name="cPassword" id="cPassword" autocomplete="off">
+              <input type="password" name="cPassword" id="cPassword" autocomplete="off">
               <span class="alert">password do not match, try again</span>
             </div>
             <div class="input-group">
@@ -86,12 +87,12 @@
               <div class="gender-box">
                 <div class="male-box">
                   <label for="male">male</label>
-                  <input type="radio" name="gender" id="male">
+                  <input type="radio" name="gender" id="male" value="male">
                   <span class="custom-checkbox">check</span>
                 </div>
                 <div class="female-box">
                   <label for="female">female</label>
-                  <input type="radio" name="gender" id="female">
+                  <input type="radio" name="gender" id="female" value="female">
                   <span class="custom-checkbox">check</span>
                 </div>
               </div>
@@ -102,16 +103,21 @@
               <div class="yesNo-box">
                 <div class="yes-box">
                   <label for="yes">yes</label>
-                  <input type="radio" name="yesNo" id="yes">
+                  <input type="radio" name="yesNo" id="yes" value="yes">
                   <span class="custom-checkbox">check</span>
                 </div>
                 <div class="no-box">
                   <label for="no">no</label>
-                  <input type="radio" name="yesNo" id="no">
+                  <input type="radio" name="yesNo" id="no" value="no">
                   <span class="custom-checkbox">check</span>
                 </div>
               </div>
               <span class="alert">select any one</span>
+            </div>
+            <div class="input-group">
+              <label for="imageFile">select image</label>
+              <input type="file" id="imageFile">
+              <span class="alert">select image file</span>
             </div>
             <div class="privacy-policy">
               <p>the Economist Group is a global organisation and operates a strict privacy policy around the world. You can view our privacy policy at <a href="#FIXME" title="www.economistgroup.com/privacy">www.economistgroup.com/privacy</a>
@@ -121,6 +127,54 @@
               <input type="submit" value="submit">
             </div>
           </form>
+          <!-- form filled data output section start -->
+          <ul class="form-input-values">
+            <li>
+              <span>first name</span>
+              <span class="first-name"></span>
+            </li>
+            <li>
+              <span>last name</span>
+              <span class="last-name"></span>
+            </li>
+            <li>
+              <span>mobile</span>
+              <span class="mobile"></span>
+            </li>
+            <li>
+              <span>position</span>
+              <span class="position"></span>
+            </li>
+            <li>
+              <span>company</span>
+              <span class="company"></span>
+            </li>
+            <li>
+              <span>company type</span>
+              <span class="company-type"></span>
+            </li>
+            <li>
+              <span>country</span>
+              <span class="country"></span>
+            </li>
+            <li>
+              <span>work email</span>
+              <span class="work-email"></span>
+            </li>
+            <li>
+              <span>password</span>
+              <span class="password"></span>
+            </li>
+            <li>
+              <span>gender</span>
+              <span class="gender"></span>
+            </li>
+            <li>
+              <span>yes / no</span>
+              <span class="yes-no"></span>
+            </li>
+          </ul>
+          <!-- form filled data output section end -->
         </div>
       </section>
     </main>
