input type=file added in structure

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
             </div>
             <div class="input-group">
               <label for="imageFile">select image</label>
-              <input type="file" id="imageFile">
-              <span class="alert">select image file</span>
+              <input type="file" id="imageFile" name="imgFile">
+              <span class="alert">select image</span>
             </div>
             <div class="privacy-policy">
               <p>the Economist Group is a global organisation and operates a strict privacy policy around the world. You can view our privacy policy at <a href="#FIXME" title="www.economistgroup.com/privacy">www.economistgroup.com/privacy</a>
@@ -172,6 +172,10 @@
             <li>
               <span>yes / no</span>
               <span class="yes-no"></span>
+            </li>
+            <li>
+              <span>image</span>
+              <span class="image"></span>
             </li>
           </ul>
           <!-- form filled data output section end -->
